# dRose

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
assets/: drose-ascii.txt
cli/: app.py  cli.py  config.default.json  config_store.py
cli/commands/: config.py  doctor.py  playlist.py  song.py
core/: downloader.py  playlist.py  utils.py
