[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "drose"
version = "0.1.0"
description = "Download YouTube Music playlists as MP3"
requires-python = ">=3.9"
dependencies = [
    "typer[all]",
    "rich",
    "yt-dlp",
    "fastapi==0.111.0",
    "uvicorn==0.23.0",
    "yt-dlp==2025.12.3",
    "tqdm==4.66.1",
    "jinja2==3.1.3",
    "python-multipart==0.0.6",
    "pydantic==2.6.0",
    "imageio-ffmpeg",
    "PyExecJS",
]

[project.scripts]
drose = "cli.app:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]