[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "drose"
version = "0.1.0"
description = "Download YouTube Music playlists as MP3"
requires-python = ">=3.9"
dependencies = [
    "typer[all]",
    "rich",
    "yt-dlp",
    "tqdm==4.66.1",
    "imageio-ffmpeg",
    
]

[project.scripts]
drose = "cli.app:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*", "core*"]
exclude = ["web*", "downloads*", "rawDownloads*", "logos*", "assets*", "zip_test*", "venv*"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]
web=[
    "fastapi==0.111.0",
    "pydantic==2.6.0",
    "uvicorn==0.23.0",
    "jinja2==3.1.3",
    "PyExecJS",
    "python-multipart",
]